Tools/MiniBrowser/mac/WK2BrowserWindowController.m
@@ -362,7 +362,7 @@ static CGFloat viewScaleForMenuItemTag(NSInteger tag)
         [self updateTextFieldFromURL:_webView.URL];
 }
 
-- (void)webView:(WKWebView *)webView runJavaScriptAlertPanelWithMessage:(NSString *)message initiatedByFrame:(WKFrameInfo *)frame completionHandler:(void (^)())completionHandler
+- (void)webView:(WKWebView *)webView runJavaScriptAlertPanelWithMessage:(NSString *)message initiatedByFrame:(WKFrameInfo *)frame completionHandler:(void (^)(void))completionHandler
 {
     NSAlert* alert = [[NSAlert alloc] init];
 
